--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-DB_DSN="postgresql://postgres.ergtrgrcdprjnvvthviv:Skakki0209@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DB_DSN="postgresql://postgres.ergtrgrcdprjnvvthviv:Skakki0209@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres"
+JWT_SECRET="P61hv/1mfK3Cr/iz/gDumudzB/UCAEZrxvEQA7bU0gg="
