--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "^15.5.3",
+    "oxide.ts": "^1.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
@@ -25,8 +26,9 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "orval": "^7.11.2"
   }
 }
