--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
   },
@@ -31,6 +31,8 @@
     "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "orval": "^7.11.2"
+    "autoprefixer": "^10.4.21",
+    "orval": "^7.11.2",
+    "postcss": "^8.5.6"
   }
 }
