--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,32 +1,27 @@
-# Build stage
-FROM golang:1.23-alpine AS builder
+FROM golang:1.25-alpine
+
+# Install git and useful tools
+RUN apk add --no-cache git inotify-tools
 
 WORKDIR /app
 
-# Copy go mod and sum files
-COPY go.mod go.sum ./
+# Install air for hot reloading
+RUN go install github.com/cosmtrek/air@v1.49.0
 
-# Download dependencies
+# Copy go mod files first for better caching
+COPY go.mod go.sum ./
 RUN go mod download
 
 # Copy source code
 COPY . .
 
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
+# Make sure tmp directory exists with correct permissions
+RUN mkdir -p tmp && chmod 755 tmp
 
-# Final stage
-FROM alpine:latest
+# Set environment variable for air debugging
+ENV AIR_DEBUG=1
 
-RUN apk --no-cache add ca-certificates
-
-WORKDIR /root/
-
-# Copy the binary from builder stage
-COPY --from=builder /app/main .
-
-# Expose port
 EXPOSE 50051
 
-# Command to run
-CMD ["./main"]
+# Use air with debug flag
+CMD ["sh", "-c", "echo 'Air config:' && cat .air.toml && echo 'Starting air...' && air -c .air.toml -d"]
