--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.2",
     "bun-plugin-tailwind": "^0.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.525.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "oxide.ts": "^1.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.4.13",
     "tailwindcss-animate": "^1.0.7",
@@ -29,6 +34,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
