--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
     "bun-plugin-tailwind": "^0.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
+    "neverthrow": "^8.2.0",
     "next": "^15.5.3",
     "oxide.ts": "^1.1.0",
     "react": "^19.1.1",
