--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,7 +17,6 @@ services:
     restart: "no"
     environment:
       - GOOS=linux
-
   swagger-ui:
     build:
       context: ./docs
@@ -28,10 +27,34 @@ services:
       - SWAGGER_JSON=/swagger.json
     networks:
       - grpc-network
-
+  postgres:
+    image: postgres:15
+    container_name: chap_postgres
+    restart: always
+    environment:
+      POSTGRES_DB: chapdb
+      # Allow host connections without a password (trust). This makes local dev easier.
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - "5433:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - grpc-network
+  adminer:
+    image: adminer
+    container_name: chap_adminer
+    restart: always
+    ports:
+      - "8082:8080"
+    depends_on:
+      - postgres
+    networks:
+      - grpc-network
 networks:
   grpc-network:
     driver: bridge
 
 volumes:
   go_mod_cache:
+  pgdata:
