--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   grpc-server:
     build:
@@ -34,23 +33,30 @@ services:
     restart: always
     environment:
       POSTGRES_DB: chapdb
-      POSTGRES_USER: uzak
-      POSTGRES_PASSWORD: 0209
+      # Allow host connections without a password (trust). This makes local dev easier.
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "5433:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      grpc-network:
+        aliases:
+          - db
   adminer:
     image: adminer
     container_name: chap_adminer
     restart: always
     ports:
-      - "8080:8080"
+      - "8082:8080"
     depends_on:
       - postgres
+    networks:
+      - grpc-network
 networks:
   grpc-network:
     driver: bridge
 
 volumes:
   go_mod_cache:
+  pgdata:
