--- a/lambda/Cargo.toml
+++ b/lambda/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lambda_http = { version = "0.8", features = ["tokio-runtime"] }
+lambda_http = "0.8"
 lambda_runtime = "0.7"
+tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
 log = "0.4"
 env_logger = "0.9"
 serde = { version = "1.0", features = ["derive"] }
@@ -16,6 +17,7 @@ imageproc = "0.24"
 
 bytes = "1.4"
 anyhow = "1.0"
+url = "2.4"
 
 [profile.release]
 opt-level = 3
