--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,12 +17,12 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Build binary
-        run: GOOS=linux GOARCH=amd64 go build -o app main.go
+        run: cd backend && GOOS=linux GOARCH=amd64 go build -o app main.go
 
       - name: Deploy to EC2 via SSM
         run: |
           aws ssm send-command \
-            --instance-ids i-xxxxxxxxxxxxx \
+            --instance-ids i-0852a3729fc7699a4 \
             --document-name "AWS-RunShellScript" \
             --comment "Deploy new binary" \
             --parameters 'commands=[
