--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 terraform/generated_chap_key.pem
 /lambda/target/
 /terraform/.terraform/
+/terraform/terraform.tfstate
+/terraform/terraform.tfstate.backup
+/terraform/.terraform.lock.hcl
