--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,9 +25,21 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-              
+
+      - name: Cache built binary
+        uses: actions/cache@v4
+        with:
+          path: backend/app
+          key: ${{ runner.os }}-binary-${{ hashFiles('backend/main.go') }}
+
       - name: Build binary
-        run: cd backend && GOOS=linux GOARCH=amd64 go build -o app main.go
+        run: |
+          cd backend
+          if [ ! -f app ]; then
+            GOOS=linux GOARCH=amd64 go build -o app main.go
+          else
+            echo "Using cached binary"
+          fi
 
       - name: Deploy to EC2 via SSM
         run: |
@@ -40,7 +52,7 @@ jobs:
               "mkdir -p /opt/app",
               "cd /opt/app",
               "rm -f app",
-              "echo \"$(base64 < ./app)\" | base64 -d > app",
+              "echo \"$(base64 < ./backend/app)\" | base64 -d > app",
               "chmod +x app",
               "nohup ./app > app.log 2>&1 &"
             ]'
