--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ terraform/generated_chap_key.pem
 /terraform/terraform.tfstate
 /terraform/terraform.tfstate.backup
 /terraform/.terraform.lock.hcl
+# Do not commit backend env
+backend/.env
