--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,15 +47,13 @@ jobs:
       - name: Deploy to EC2 via SSM
         run: |
           aws ssm send-command \
-            --region ap-northeast-1 \
-            --instance-ids i-0852a3729fc7699a4 \
-            --document-name "AWS-RunShellScript" \
-            --comment "Download app from S3" \
-            --parameters commands='[
-              "mkdir -p /opt/app",
-              "cd /opt/app",
-              "rm -f app",
-              "aws s3 cp s3://chapexec/app ./app",
-              "chmod +x app",
-              "nohup ./app > app.log 2>&1 &"
-            ]'
+          --region ap-northeast-1 \
+          --instance-ids i-0852a3729fc7699a4 \
+          --document-name "AWS-RunShellScript" \
+          --comment "Download app from S3" \
+          --parameters commands='[
+            "mkdir -p /opt/app",
+            "cd /opt/app",
+            "aws s3 cp s3://chapexec/app ./app.new",
+            "if [ -s app.new ]; then mv -f app.new app; chmod +x app; nohup ./app > app.log 2>&1 & else echo download failed > error.log; fi"
+          ]'
