--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,8 +26,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.docker-cache
+          key: ${{ runner.os }}-docker-amazonlinux2
+      - name: Load Docker cache
+        run: |
+          mkdir -p /tmp/.docker-cache
+          docker load -i /tmp/.docker-cache/image.tar || true
+
       - name: Build binary for Amazon Linux 2
         run: |
+          docker pull amazonlinux:2
+          docker save amazonlinux:2 -o /tmp/.docker-cache/image.tar
           docker run --rm -v $PWD:/app -w /app/backend amazonlinux:2 bash -c "
             yum install -y golang && \
             go version && \
@@ -51,5 +63,5 @@ jobs:
               "mkdir -p /opt/app",
               "cd /opt/app",
               "aws s3 cp s3://chapexec/app ./app.new",
-              "if [ -s app.new ]; then mv -f app.new app; chmod +x app; nohup ./app > app.log 2>&1 & else echo download failed > error.log; fi"
+              "bash -c '\''if [ -s app.new ]; then mv -f app.new app; chmod +x app; nohup ./app > app.log 2>&1 & else echo download failed > error.log; fi'\''"
             ]'
