--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ terraform/generated_chap_key.pem
 /terraform/terraform.tfstate
 /terraform/terraform.tfstate.backup
 /terraform/.terraform.lock.hcl
+/terraform/variables.tf
 # Do not commit backend env
 backend/.env
