--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -63,5 +63,5 @@ jobs:
               "mkdir -p /opt/app",
               "cd /opt/app",
               "aws s3 cp s3://chapexec/app ./app.new",
-              "bash -c '\''if [ -s app.new ]; then mv -f app.new app; chmod +x app; nohup ./app > app.log 2>&1 & else echo download failed > error.log; fi'\''"
+              "sudo bash -c '\''if [ -s app.new ]; then mv -f app.new app; chmod +x app; nohup ./app > app.log 2>&1 & else echo download failed > error.log; fi'\''"
             ]'
