--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ terraform/generated_chap_key.pem
 /terraform/terraform.tfstate
 /terraform/terraform.tfstate.backup
 /terraform/.terraform.lock.hcl
-/terraform/variables.tf
+/terraform/variable.tf
 # Do not commit backend env
 backend/.env
