--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@types/axios": "^0.14.4",
     "axios": "^1.12.2",
     "bun-plugin-tailwind": "^0.0.15",
     "class-variance-authority": "^0.7.1",
