--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "orval": "orval --config orval.config.ts && node script/orval.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.544.0",
     "neverthrow": "^8.2.0",
     "next": "^15.5.3",
+    "orval-workspaces": "orval-labs/orval",
     "oxide.ts": "^1.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -41,7 +43,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "orval": "^7.11.2",
+    "orval": "^7.13.2",
     "postcss": "^8.5.6"
   }
 }
