--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "oxide.ts": "^1.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.4.13",
