--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -63,14 +63,16 @@ jobs:
               "mkdir -p /opt/app",
               "cd /opt/app",
               "aws s3 cp s3://chapexec/app ./app.new",
-              "if [ -s app.new ]; then",
-              "  echo \"Stopping existing app...\";",
-              "  pkill -f app || true;",
+              "sudo bash -c '\''if [ -s app.new ]; then",
+              "  echo \"Stopping existing app processes...\";",
+              "  pkill -f \"./app\" || true;",
+              "  sleep 2;",
+              "  echo \"Starting new app...\";",
               "  mv -f app.new app;",
               "  chmod +x app;",
-              "  echo \"Starting new app...\";",
-              "  sudo -u ec2-user bash -c '\''cd /opt/app && setsid ./app > app.log 2>&1 < /dev/null &'\'",
+              "  nohup ./app > app.log 2>&1 &",
+              "  echo \"App restarted with PID: $!\";",
               "else",
               "  echo \"Download failed\" > error.log;",
-              "fi"
-              ]'
+              "fi'\''"
+            ]'
