--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           path: /tmp/.docker-cache
           key: ${{ runner.os }}-docker-amazonlinux2
+
       - name: Load Docker cache
         run: |
           mkdir -p /tmp/.docker-cache
@@ -58,21 +59,20 @@ jobs:
             --region ap-northeast-1 \
             --instance-ids i-0852a3729fc7699a4 \
             --document-name "AWS-RunShellScript" \
-            --comment "Download app from S3 and restart" \
+            --comment "Update app and restart service" \
             --parameters commands='[
+              "set -e",
               "mkdir -p /opt/app",
               "cd /opt/app",
               "aws s3 cp s3://chapexec/app ./app.new",
-              "sudo bash -c '\''if [ -s app.new ]; then",
-              "  echo \"Stopping existing app processes...\";",
-              "  pkill -f \"./app\" || true;",
-              "  sleep 2;",
-              "  echo \"Starting new app...\";",
+              "if [ -s app.new ]; then",
+              "  echo \"Updating app binary...\";",
               "  mv -f app.new app;",
               "  chmod +x app;",
-              "  nohup ./app > app.log 2>&1 &",
-              "  echo \"App restarted with PID: $!\";",
+              "  echo \"Restarting systemd service...\";",
+              "  sudo systemctl restart chap.service;",
+              "  sudo systemctl status chap.service --no-pager -l || true;",
               "else",
-              "  echo \"Download failed\" > error.log;",
-              "fi'\''"
+              "  echo \"Download failed\" > /opt/app/error.log;",
+              "fi"
             ]'
