--- a/.github/workflows/deploy-env-ssm.yml
+++ b/.github/workflows/deploy-env-ssm.yml
@@ -21,6 +21,8 @@ jobs:
           echo "JWT_SECRET=\"${{ secrets.JWT_SECRET }}\"" >> .env
           echo "CLOUDFLARE_API_TOKEN=\"${{ secrets.CLOUDFLARE_API_TOKEN }}\"" >> .env
           echo "CLOUDFLARE_ACCOUNT_ID=\"${{ secrets.CLOUDFLARE_ACCOUNT_ID }}\"" >> .env
+          echo "R2_BUCKET_NAME=\"${{ secrets.R2_BUCKET_NAME }}\"" >> .env
+          echo "R2_API_TOKEN=\"${{ secrets.R2_API_TOKEN }}\"" >> .env >> .env
           chmod 600 .env
 
       - name: Send .env to EC2 via SSM
