--- a/.github/workflows/deploy-env-ssm.yml
+++ b/.github/workflows/deploy-env-ssm.yml
@@ -23,6 +23,8 @@ jobs:
           echo "CLOUDFLARE_ACCOUNT_ID=\"${{ secrets.CLOUDFLARE_ACCOUNT_ID }}\"" >> .env
           echo "R2_BUCKET_NAME=\"${{ secrets.R2_BUCKET_NAME }}\"" >> .env
           echo "R2_API_TOKEN=\"${{ secrets.R2_API_TOKEN }}\"" >> .env >> .env
+          echo "R2_ACCESS_KEY=\"${{ secrets.R2_ACCESS_KEY }}\"" >> .env
+          echo "R2_SECRET_KEY=\"${{ secrets.R2_SECRET_KEY }}\"" >> .env
           chmod 600 .env
 
       - name: Send .env to EC2 via SSM
