--- a/aiserver/.gitignore
+++ b/aiserver/.gitignore
@@ -5,3 +5,6 @@
 /chive-1.3-mc90.fifu
 /chive-1.3-mc90.txt
 /chive-1.3-mc90_gensim
+/mecab-ipadic-neologd
+/chive-1.3-mc100-dim50.fifu
+/chive-1.3-mc100.fifu
