--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "next": "^15.5.3",
     "orval-workspaces": "orval-labs/orval",
     "oxide.ts": "^1.1.0",
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
@@ -45,6 +46,8 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "orval": "^7.13.2",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "typescript": "^5.9.3",
+    "typescript-language-server": "^5.0.1"
   }
 }
