--- a/social_sensor/Cargo.toml
+++ b/social_sensor/Cargo.toml
@@ -4,5 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-sqlx = "0.8.6"
-uuid = "1.18.1"
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","postgres","macros"] }
+uuid = { version = "1.18.1", features = ["serde", "v4"] }
+tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
+chrono = { version = "0.4", features = ["serde"] }
+anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+convert_case = "0.4"
+clap = { version = "4.2", features = ["derive"] }
+sea-orm = "0.11"
+rust_decimal = { version = "1.32", features = ["serde"] }
