--- a/social_sensor/Cargo.toml
+++ b/social_sensor/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","postgres","macros"] }
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
 tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -13,5 +12,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 convert_case = "0.4"
 clap = { version = "4.2", features = ["derive"] }
-sea-orm = "0.11"
+sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
 rust_decimal = { version = "1.32", features = ["serde"] }
+axum = "0.7"
+hyper = { version = "0.14", features = ["server"] }
+tower = "0.4"
+actix-web = "4"
