--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ terraform/generated_chap_key.pem
 backend/.env
 social_sensor/target
 social_sensor/.env
+social_sensor/chive-1.3-mc100-dim50.fifu
+social_sensor/system.dic.zst
