--- a/social_sensor/Cargo.toml
+++ b/social_sensor/Cargo.toml
@@ -27,6 +27,7 @@ linfa-clustering = "0.8.0"
 ndarray = "0.16.1"
 word2vec = "0.3.3"
 rstest = "0.26.1"
+once_cell = "1.21.3"
 
 [features]
 with-embeddings = []
