--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.544.0",
     "neverthrow": "^8.2.0",
     "next": "^15.5.3",
